--- a/config.yaml
+++ b/config.yaml
@@ -33,6 +33,9 @@ agent:
   # Maximum file size to scan (MB)
   max_file_size_mb: 10
   
+  # Maximum files per scan (0 = unlimited)
+  max_files_per_scan: 0
+  
   # Number of concurrent scanning threads
   concurrency: 4
   
@@ -75,7 +78,7 @@ privacy:
 # Reporting Configuration
 reporting:
   # Central server URL for report submission (use HTTP for development)
-  server_url: "http://localhost:3001"
+  server_url: "http://192.168.56.1:3001"
   
   # API endpoint for report submission
   api_endpoint: "/api/reports"
@@ -111,7 +114,7 @@ tls:
   ca_cert: ""
   
   # WebSocket server URL for real-time communication
-  websocket_url: "http://localhost:3001"
+  websocket_url: "http://192.168.56.1:3001"
 
 # Audit Logging Settings
 audit:
